--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,7 @@ languageCode = "en-us"
 title = "Bird's Eye Reproducibility"
 theme = "minimal"
 googleAnalytics = ""
+publishDir = "docs"
 
 [params]
     author = "Ciera Martinez"
