--- a/config.toml
+++ b/config.toml
@@ -41,10 +41,10 @@ publishDir = "docs"
 # The "name" field should match the name of the icon in Font Awesome.
 # The list of available icons can be found at http://fontawesome.io/icons.
 
-[[menu.icon]]
-    url = "ccmartinez@berkeley.edu"
-    name = "envelope-o"
-    weight = 1
+#[[menu.icon]]
+#    url = "ccmartinez@berkeley.edu"
+#    name = "envelope-o"
+#    weight = 1
 
 [[menu.icon]]
     url = "https://github.com/iamciera/"
